Sat May 02 09:20:30 GMT 2015  Olly Betts <olly@survex.com>

	* api/query.cc,api/queryinternal.cc,api/queryinternal.h,
	  include/xapian/query.h,queryparser/queryparser.lemony,
	  tests/api_query.cc: Add a choice of ways to apply the limit on
	  wildcard expansion.  Fixes #608, reported by boomboo.

Fri May 01 14:53:16 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Reenable replicate3 for glass, as it no
	  longer fails.

Fri May 01 13:38:48 GMT 2015  Olly Betts <olly@survex.com>

	* common/autoptr.h: Just map AutoPtr to std::unique_ptr now we require
	  C++11.

Fri May 01 13:33:28 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc,net/progclient.cc: IRIX is dead, so remove
	  lingering traces of support for SGI's compiler.

Fri May 01 08:59:13 GMT 2015  Olly Betts <olly@survex.com>

	* HACKING,INSTALL: STLport was last released in 2008, so (a) it's no
	  longer actively developed and (b) it won't support C++11, so strip
	  out documentation which mentions it.
	* configure.ac: For Sun's C++ compiler, -std=c++11 enables C++11
	  support, and is incompatible with -library=stlport, so remove code
	  to enable that later option.

Fri May 01 01:37:24 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Tweak comment to match xapian-omega's configure.

Fri May 01 01:36:41 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Set default value for AUTOM4TE before AC_OUTPUT so the
	  default will actually get used.

Fri May 01 01:36:05 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Add explicit AC_CANONICAL_HOST.

Fri May 01 01:08:56 GMT 2015  Olly Betts <olly@survex.com>

	* api/matchspy.cc,tests/api_nodb.cc: Eliminate needless uses of
	  AutoPtr.

Fri May 01 00:37:42 GMT 2015  Olly Betts <olly@survex.com>

	* tests/internaltest.cc: Remove self-assignment check of AutoPtr as
	  that doesn't work under C++11 when AutoPtr is unique_ptr, and add
	  other checks of reassignment which should work for both.
